--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -14,7 +14,7 @@
             <item
                 android:id="@+id/subitem2"
                 android:checkable="false"
-                android:title="Teisės funkcijos"/>
+                android:title="Tiesės funkcijos" />
             <item
                 android:id="@+id/subitem3"
                 android:checkable="false"
